# OS-labs

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
CP/: CMakeLists.txt  main.cpp
CP/configs/: config.ini
CP/doc/: report.docx  researchdoc.md
CP/include/: dag.h
CP/src/: dag.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/doc/: report.docx
lab1/include/: lab1.h
lab1/src/: child.c  child.cpp  parent.c  parent.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: report.docx  ~$report.docx
lab2/include/: TDeterminantCalculator.h  TMatrix.h  determinant_calculator.h  matrix.h
lab2/src/: TDeterminantCalculator.cpp  TMatrix.cpp  determinant_calculator.cpp  matrix.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report.docx  ~$report.docx
lab3/include/: lab3.h
lab3/src/: child.cpp  parent.cpp
lab4/: CMakeLists.txt  program1.cpp  program2.cpp
lab4/doc/: report.docx
lab4/include/: functions.h
lab4/src/: lib1.cpp  lib2.cpp
lab5-7/: CMakeLists.txt  main_controller.cpp  main_worker.cpp
lab5-7/doc/: report.docx
lab5-7/include/: common.h  tcontroller.h  tmessaging.h  tsearch.h  ttopology.h  tworker.h
lab5-7/src/: tcontroller.cpp  tmessaging.cpp  tsearch.cpp  ttopology.cpp  tworker.cpp
lab8/doc/: report.docx
tests/: CMakeLists.txt  CP_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_lib1_test.cpp  lab4_lib2_test.cpp  lab4_test.cpp  lab5-7_test.cpp
